--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,22 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  <h1>Hello, <i class="fa fa-globe"></i></h1>
+  <div class="container">
+
+	  <h1>Hello, <i class="fa fa-globe"></i></h1>
+
+	  <div class="friend">
+	  	<img src="https://media.giphy.com/media/By1dqnDPrSP1m/giphy.gif">
+	  </div>
+	  <div class="totoro">
+	  	<div class="health"><div class="healthAmt"></div></div>
+	  	<img src="http://38.media.tumblr.com/c7b7217a57bab325710dff5314e3cb97/tumblr_mt75djJp0Y1rfjowdo1_500.gif">
+	  </div>
+	  <div class="life">
+	  	<img src="https://33.media.tumblr.com/d01e3095937a89de0f0d1b13e3dc9cd6/tumblr_ml8w56PjL31qm1b5xo1_400.gif">
+	  </div>
+
+  </div>
   
   <script src="js/main.js"></script>
 </body>
