Added dropdown menus for selecting "friend" or "enemy"

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Hello, World</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link href="https://fonts.googleapis.com/css?family=Amaranth" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
@@ -13,6 +14,8 @@
 	  <div class="friend">
 	  	<h2>Do you want to help Totoro?</h2>
 	  	<img src="https://media.giphy.com/media/By1dqnDPrSP1m/giphy.gif">
+	  	<button class="make-friend">Be a friend!</button>
+	  	<div class="friend-choices"></div>
 	  </div>
 		  <div class="totoro">
 		  	<div class="health"><div class="healthAmt"></div></div>
@@ -21,6 +24,8 @@
 	  <div class="life">
 	  	<h2>Or challenge Totoro?</h2>
 	  	<img src="https://33.media.tumblr.com/d01e3095937a89de0f0d1b13e3dc9cd6/tumblr_ml8w56PjL31qm1b5xo1_400.gif">
+	  	<button class="make-enemy">Challenge Totoro!</button>
+	  	<div class="life-choices"></div>
 	  </div>
   </div>
   
