created fade in and fade out for selecting player

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,9 @@
 	  	<h2>Do you want to help Totoro?</h2>
 	  	<img src="https://media.giphy.com/media/By1dqnDPrSP1m/giphy.gif">
 	  	<button class="make-friend">Be a friend!</button>
+	  </div>
+	  <div class="friend-arena">
+	  hello this is an empty div
 	  	<div class="friend-choices"></div>
 	  </div>
 		  <div class="totoro">
@@ -25,10 +28,13 @@
 	  	<h2>Or challenge Totoro?</h2>
 	  	<img src="https://33.media.tumblr.com/d01e3095937a89de0f0d1b13e3dc9cd6/tumblr_ml8w56PjL31qm1b5xo1_400.gif">
 	  	<button class="make-enemy">Challenge Totoro!</button>
+	  </div>
+	  <div class="enemy-arena">
+	  hello this is an empty div
 	  	<div class="life-choices"></div>
 	  </div>
   </div>
-  
-  <script src="js/main.js"></script>
+
+	 <script src="js/main.js"></script>
 </body>
 </html>
