Added friend choices screen

--- a/app/index.html
+++ b/app/index.html
@@ -17,8 +17,11 @@
 	  	<button class="make-friend">Be a friend!</button>
 	  </div>
 	  <div class="friend-arena">
-	  hello this is an empty div
+	  	<h2>What can you do to help Totoro?</h2>
 	  	<div class="friend-choices"></div>
+	  </div>
+	  <div class="computer-friend">
+	  	this is the computer friend part!
 	  </div>
 		  <div class="totoro">
 		  	<div class="health"><div class="healthAmt"></div></div>
@@ -32,6 +35,9 @@
 	  <div class="enemy-arena">
 	  hello this is an empty div
 	  	<div class="life-choices"></div>
+	  </div>
+	  <div class="computer-enemy">
+	  	you are playing the computer!
 	  </div>
   </div>
 
