added buttons for enemy opts

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
 	  	<button class="make-enemy">Challenge Totoro!</button>
 	  </div>
 	  <div class="enemy-arena">
-	  hello this is an empty div
+	  	<h2>How will you challenge Totoro?</h2>
 	  	<div class="life-choices"></div>
 	  </div>
 	  <div class="computer-enemy">
