when i click a choice button, id is returned

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
 		  	<img src="http://38.media.tumblr.com/c7b7217a57bab325710dff5314e3cb97/tumblr_mt75djJp0Y1rfjowdo1_500.gif">
 		  </div>
 	  <div class="life">
-	  	<h2>Or challenge Totoro?</h2>
+	  	<h2>Do you want to challenge Totoro?</h2>
 	  	<img src="https://33.media.tumblr.com/d01e3095937a89de0f0d1b13e3dc9cd6/tumblr_ml8w56PjL31qm1b5xo1_400.gif">
 	  	<button class="make-enemy">Challenge Totoro!</button>
 	  </div>
