--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,9 @@
 <body>
   <div class="container">
 
-	  <h1>Hello, <i class="fa fa-globe"></i></h1>
-
+	  <h1><i class="fa fa-heart"></i>Welcome to the Totoro Friendship Game<i class="fa fa-heart"></i></h1>
+	  <hr>
+	  <br>
 	  <div class="friend">
 	  	<h2>Do you want to help Totoro?</h2>
 	  	<img src="https://media.giphy.com/media/By1dqnDPrSP1m/giphy.gif">
