Added instruction screen for both play options

--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,17 @@
 	  </div>
   </div>
 
+  <div class="f-instructions">
+  	<h2>Instructions:</h2>
+  	<p>Totoro isn't feeling too great. His happy meter is set to 0. Help him out by offering solutions to the situations making him sad. When a new situation is presented on the right side of the screen, pick the best option to increase your points. Once Totoro has 100 on his happy meter, you win!</p>
+  	<button class="f-play">Ready to play?</button>
+  </div>
+  <div class="e-instructions">
+  	<h2>Instructions:</h2>
+  	<p>Totoro is feeling great! His happy meter is set to 100. Throw him some life challenges to bring him down. Present a new situation to see if he can come up with the right solution. Once Totoro's happy meter reaches 0, you win!</p>
+  	<button class="e-play">Ready to play?</button>
+  </div>
+
 	 <script src="js/main.js"></script>
 </body>
 </html>
