changed .append to .html so that computer answers change each time

--- a/app/index.html
+++ b/app/index.html
@@ -9,9 +9,11 @@
 <body>
   <div class="container">
 
+	  <div class="title">
 	  <h1><i class="fa fa-heart"></i>Welcome to the Totoro Friendship Game<i class="fa fa-heart"></i></h1>
 	  <hr>
 	  <br>
+	  </div>
 	  <div class="friend">
 	  	<h2>Do you want to help Totoro?</h2>
 	  	<img src="https://media.giphy.com/media/By1dqnDPrSP1m/giphy.gif">
@@ -22,7 +24,9 @@
 	  	<div class="friend-choices"></div>
 	  </div>
 	  <div class="computer-friend">
-	  	this is the computer friend part!
+	  	<h2>Computer Player</h2>
+	  	<span>Totoro's Solution</span>
+	  	<div class="comp-answer"></div>
 	  </div>
 		  <div class="totoro">
 		  	<div class="health"><div class="healthAmt"></div></div>
@@ -38,7 +42,9 @@
 	  	<div class="life-choices"></div>
 	  </div>
 	  <div class="computer-enemy">
-	  	you are playing the computer!
+	  	<h2>Computer Player</h2>
+	  	<span>Life Challenge:</span>
+	  	<div class="comp-answer-2"></div>
 	  </div>
   </div>
 
@@ -52,6 +58,7 @@
   	<p>Totoro is feeling great! His happy meter is set to 100. Throw him some life challenges to bring him down. Present a new situation to see if he can come up with the right solution. Once Totoro's happy meter reaches 0, you win!</p>
   	<button class="e-play">Ready to play?</button>
   </div>
+  <div class="all-i-do-is-win"><h2>You win! <i class="fa fa-heart"></i> </h2></div>
 
 	 <script src="js/main.js"></script>
 </body>
