finished styling of game - final check of tests

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,10 @@
   	<p>Totoro is feeling great! His happy meter is set to 100. Throw him some life challenges to bring him down. Present a new situation to see if he can come up with the right solution. Once Totoro's happy meter reaches 0, you win!</p>
   	<button class="e-play">Ready to play?</button>
   </div>
-  <div class="all-i-do-is-win"><h2>You win! <i class="fa fa-heart"></i> </h2></div>
+  <div class="all-i-do-is-win">
+	  <h2>You win! <i class="fa fa-heart"></i> </h2>
+	  <img src="http://33.media.tumblr.com/5d8cc951fc3a05041625ce036d778d58/tumblr_inline_muesowIuqb1qd4dt1.gif">
+  </div>
 
 	 <script src="js/main.js"></script>
 </body>
